templates/desktop-vnc_template.yaml
---
# Source: desktop-vnc/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-desktop-vnc
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
  labels:
    app: release-name-desktop-vnc
    chart: "desktop-vnc-2.0.0"
    release: "release-name"
    heritage: "Helm"
spec:
  podSelector:
    matchLabels:
      app: release-name-desktop-vnc
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-ingress
      ports:
        - protocol: TCP
          port: 8080
---
# Source: desktop-vnc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-desktop-vnc
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
  labels:
    app: release-name-desktop-vnc
    chart: "desktop-vnc-2.0.0"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: release-name-desktop-vnc-service
  - name: release-name-desktop-vnc-http
    protocol: TCP
    port: 6901
    targetPort: 6901
  selector:
    app: release-name-desktop-vnc
---
# Source: desktop-vnc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-desktop-vnc
  labels:
    app: release-name-desktop-vnc
    chart: "desktop-vnc-2.0.0"
    release: "release-name"
    heritage: "Helm"
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: release-name-desktop-vnc
        release: release-name
  template:
    metadata:
      annotations:
        checksum/config: 82b37506b11eb42c87145fd3861849caf9c2980a060d68f5a63653f7cf6226e5
        appstore.uninett.no/contact_email: example@uninett.no
      labels:
        app: release-name-desktop-vnc
        chart: "desktop-vnc-2.0.0"
        release: "release-name"
        heritage: "Helm"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - image: sigma2as/goidc-proxy:next
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        name: auth-proxy
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 150m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /conf
          name: oidcconfig
        workingDir: /conf
      - name: viz
        image: quay.io/nird-toolkit/desktop-vnc:20220225-dd67aab
        imagePullPolicy: IfNotPresent
        args:
        - -w
        readinessProbe:
          httpGet:
            path: /
            port: 6901
            scheme: HTTP
          initialDelaySeconds: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 2
            memory: 2G
            nvidia.com/gpu: 0
          limits:
            cpu: 4
            memory: 2G
            nvidia.com/gpu: 0
        volumeMounts:
          - name: passwd
            mountPath: /etc/passwd
            subPath: passwd
          - name: group
            mountPath: /etc/group
            subPath: group
          - name: shm
            mountPath: /dev/shm
      volumes:
      - name: passwd
        configMap:
          name: release-name-desktop-vnc
          items:
          - key: passwd
            path: passwd
      - name: group
        configMap:
          name: release-name-desktop-vnc
          items:
          - key: group
            path: group
      - name: oidcconfig
        secret:
            secretName: release-name-desktop-vnc
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 256M
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
---
# Source: desktop-vnc/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-desktop-vnc
  labels:
    app: release-name-desktop-vnc
    chart: "desktop-vnc-2.0.0"
    release: "release-name"
    heritage: "Helm"
  annotations:
    appstore.uninett.no/contact_email: example@uninett.no
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - secretName: wildcard-tls
      hosts:
         - local-chart.example.com
  rules:
    - host: local-chart.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-desktop-vnc
                port: 
                  number: 80
